# trading_bot

./: .flake8  .gitignore  Makefile  docker-compose.yml  dockerfile  main.py  pyproject.toml  pytest.ini  quickstart.md  requirements.txt  setup.py  start.sh  test.py
.github/workflows/: ci.yml
analysis/: __init__.py  groq_analyzer.py  technical.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  bot.py  portfolio.py  risk_manager.py
execution/: __init__.py  order_manager.py  position_tracker.py
strategies/: __init__.py  base_strategy.py  ml_strategy.py  rsi_strategy.py  wheel_strategy.py
tests/: __init__.py  test_basic.py  test_integration.py  test_strategies.py
utils/: __init__.py  helpers.py  logger.py
